# TwigLoopOpen

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/ai-assist-service/: pyproject.toml
apps/ai-assist-service/app/: main.py
apps/core-api/: pyproject.toml
apps/core-api/alembic/: env.py
apps/core-api/alembic/versions/: 0b3608505f7c_init_9_core_tables.py  a001_add_missing_base_tables.py  a002_alter_tables_incremental_fields.py  a003_create_event_tables.py  a004_create_edge_tables_batch1.py  a005_create_snapshot_tables_batch1.py  a006_create_updated_at_trigger.py  b001_create_drafts_table.py  c001_add_missing_indexes.py  c002_add_seat_unique_constraint.py  c003_fix_string_length_drift.py  d001_delivery_evidence_verification.py  d002_task_signal_fields.py
apps/core-api/app/: exceptions.py  main.py  metrics.py  observability.py  rate_limit.py
apps/core-api/app/api/v1/: a2a.py  admin.py  applications.py  auth.py  credentials.py  drafts.py  events.py  evidence.py  graph.py  me.py  projects.py  quotas.py  reviews.py  router.py  rules.py  sources.py  sponsors.py  tasks.py  webhooks.py  work_packages.py  workflows.py
apps/core-api/app/db/: session.py
apps/core-api/app/domain/: a2a_protocol.py  agent_card.py  ewu.py  quota_config.py  rwu_swu.py  state_machine.py
apps/core-api/app/models/: __init__.py  account.py  actor.py  agent_brief.py  application.py  base.py  credential_history.py  delivery_evidence.py  domain_event.py  draft.py  edges.py  project.py  review_record.py  seat.py  signal.py  snapshots.py  source.py  sponsor_support.py  state_transition.py  task_assignment.py  task_card.py  task_verification.py  verifiable_credential.py  work_package.py
apps/core-api/app/repositories/: account_repo.py  actor_repo.py  agent_brief_repo.py  application_repo.py  credential_history_repo.py  domain_event_repo.py  draft_repo.py  edge_repo.py  evidence_repo.py  project_repo.py  review_record_repo.py  seat_repo.py  signal_repo.py  snapshot_repo.py  source_repo.py  sponsor_support_repo.py  state_transition_repo.py  task_card_repo.py  vc_repo.py  verification_repo.py  work_package_repo.py
apps/core-api/app/schemas/: admin.py  application.py  auth.py  credential.py  domain_event.py  draft.py  edges.py  event.py  evidence.py  graph.py  project.py  review.py  signal.py  snapshots.py  source.py  sponsor.py  state_transition.py  status.py  task_card.py  user.py  work_package.py
apps/core-api/app/services/: admin_service.py  application_service.py  auth_service.py  brief_service.py  coordination_service.py  draft_service.py  event_write_service.py  evidence_service.py  feature_snapshot_service.py  profile_service.py  project_service.py  quota_preflight_service.py  relation_edge_service.py  review_service.py  signal_service.py  source_service.py  sponsor_service.py  task_card_service.py  vc_service.py  work_package_service.py
apps/core-api/app/services/agents/: github_signal_agent.py  llm_client.py  matching_agent.py  review_prep_agent.py  vc_agent.py
apps/mcp-server/: pyproject.toml
apps/mcp-server/app/: main.py
apps/mcp-server/app/clients/: core_api.py
apps/mcp-server/app/tools/: auth_tools.py  context_tools.py  draft_tools.py  evidence_tools.py  orchestration_tools.py  preflight_tools.py  project_tools.py  quota_tools.py
apps/source-sync-worker/: pyproject.toml
apps/source-sync-worker/app/: main.py
apps/web/: package-lock.json
docs/: 00-release-plan.md  01-onboarding.md  02-boundary.md  02-installation.md  04-architecture.md  05-rules-overview.md  README-public.md  audit-report.md  ewu-rwu-swu-rules.md
docs/legal/: 01-privacy-policy.md  02-terms-of-service.md  03-cookie-notice.md  04-security-page.md  05-privacy-requests.md  10-beta-boundary-and-risk-notice.md
scripts/: init-clickhouse.sql  init-db.sql
skills/twigloop/: SKILL.md
tests/: conftest.py
tests/fixtures/: __init__.py  actors.py  applications.py  projects.py  tasks.py
tests/helpers/: __init__.py  assertions.py  auth.py  factories.py
tests/integration/: test_application_api.py  test_auth_api.py  test_profile_api.py  test_project_api.py  test_quota_api.py  test_vc_api.py  test_webhook_api.py
tests/regression/: test_state_transitions.py
tests/scenario/: test_golden_path_general.py  (+3 more)
workflows/: pyproject.toml
workflows/temporal/: __init__.py  client.py  core_api.py  shared_schemas.py  starter.py  worker.py
workflows/temporal/application_review/: activities.py  schemas.py  workflows.py
workflows/temporal/project_publish/: activities.py  schemas.py  workflows.py
workflows/temporal/public_benefit_review/: activities.py  schemas.py  workflows.py
(+68 files in other folders)
