[project]
name = "twigloop"
version = "0.1.0"
description = "AI-native project collaboration platform"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/*", "packages/*", "workflows"]
exclude = ["apps/web"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "packages"]
extend-exclude = ["*/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = [
    "UP046",  # Pydantic Generic[T] 不支持 PEP 695 type params
    "B008",   # FastAPI Depends() in default args is standard pattern
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
explicit_package_bases = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
mypy_path = "apps/core-api:apps/mcp-server:apps/ai-assist-service:apps/source-sync-worker:packages/shared-schemas/src:packages/shared-config/src:packages/shared-auth/src:packages/shared-events/src:packages/shared-observability/src"

[[tool.mypy.overrides]]
module = "temporal.*"
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]
