[project]
name = "workflows"
version = "0.1.0"
description = "Temporal durable workflows for Twig Loop"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.9",
    "httpx>=0.28",
    "pydantic>=2.10",
    "shared-config",
    "shared-schemas",
    "shared-events",
    "shared-observability",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["temporal"]

[tool.uv.sources]
shared-config = { workspace = true }
shared-schemas = { workspace = true }
shared-events = { workspace = true }
shared-observability = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
]
