[project]
name = "ai-assist-service"
version = "0.1.0"
description = "LLM-assisted structuring service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "shared-schemas",
    "shared-config",
    "shared-observability",
]

[tool.uv.sources]
shared-schemas = { workspace = true }
shared-config = { workspace = true }
shared-observability = { workspace = true }
