[project]
name = "core-api"
version = "0.1.0"
description = "Twig Loop core business API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "email-validator>=2.2",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "shared-schemas",
    "shared-config",
    "shared-auth",
    "shared-events",
    "shared-observability",
    "workflows",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
shared-schemas = { workspace = true }
shared-config = { workspace = true }
shared-auth = { workspace = true }
shared-events = { workspace = true }
shared-observability = { workspace = true }
workflows = { workspace = true }
