[project]
name = "mcp-server"
version = "0.1.0"
description = "Standard MCP Server for Twig Loop (replaces mcp-gateway + mcp-orchestrator)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.12",
    "httpx>=0.28",
    "shared-schemas",
    "shared-config",
    "shared-auth",
    "shared-events",
    "shared-observability",
    "workflows",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
shared-schemas = { workspace = true }
shared-config = { workspace = true }
shared-auth = { workspace = true }
shared-events = { workspace = true }
shared-observability = { workspace = true }
workflows = { workspace = true }
